2001-10-26  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* textmodes/texinfmt.el (texinfo-format-ifnotinfo): New function.
	(ifnothtml): New alias.

2001-10-27  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/text-mode.el (text-mode): Use define-derived-mode.
	(toggle-text-mode-auto-fill): Use derived-mode-p.

2001-10-27  Gerd Moellmann  <gerd.moellmann@t-online.de>

	* net/ange-ftp.el (ange-ftp-send-cmd): Call fix-name-func for
	`mdtm'.  From "Forrest Cahoon" <forrest.cahoon@merrillcorp.com>.

2001-10-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* term/pc-win.el (x-frob-font-slant, x-frob-font-weight):
	Add make-obsolete cookies, to follow faces.el.

	These changes avoid warnings from the byte compiler in faces.el:

	* faces.el (internal-get-face): Use facep instead of the obsolete
	internal-find-face.
	(internal-frob-font-weight, internal-frob-font-slant):
	New defaliases for obsolete functions.
	(x-make-font-bold, x-make-font-demibold, x-make-font-unbold)
	(x-make-font-italic, x-make-font-oblique, x-make-font-unitalic)
	(x-make-font-bold-italic): Use internal-frob-font-weight and
	internal-frob-font-slant aliases instead of the obsolete
	x-frob-... functions.

2001-10-26  Sam Steingold  <sds@gnu.org>

	* textmodes/sgml-mode.el (html-mode): Set `html-xhtml' from the
	DOCTYPE; set `mode-name' based on it.
	(html-tag-alist): Use `html-xhtml' for "li", "dt" and "dd".
	(sgml-tag): Close empty tags in XHTML.

2001-10-26  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el: (w32-charset-info-alist): Use ANSI for iso10646-1
	when UNICODE is not defined.

2001-10-26  Sam Steingold  <sds@gnu.org>

	* font-lock.el (c-font-lock-keywords-2): Do not require labels to
	be alone on the line.

2001-10-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* button.el (button): Special face definition for MS-DOS terminals.

2001-10-26  Sam Steingold  <sds@gnu.org>

	* progmodes/sh-script.el (sh-font-lock-syntactic-keywords):
	Protect the /= test by checking that the args are non-nil.